--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2184,7 +2184,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In 2019, there was a weak but statistically significant positive correlation between education level and age at first use among substance use treatment clients (Spearman's $ρ = 0.0775$, $p < 0.001$). This trend was also observed in 2021, where the correlation remained positive but weaker (Spearman's $ρ = 0.0481$), with the results still being statistically significant ( $p < 5 \\times 10^{-97}$). These findings suggest that higher education levels may be slightly associated with later age at first substance use among these clients, though the strength of this association is weak."
+    "In 2019, there was a weak but statistically significant positive correlation between education level and age at first use among substance use treatment clients (Spearman's $ρ = 0.0775$, $p < 0.001$). This trend was also observed in 2021, where the correlation remained positive but weaker (Spearman's $ρ = 0.0481$), with the results still being statistically significant ( $p < 5 \\times 10^{-97}$). The extremely low p-values is due to the sample size being very large; with large data sets, even very small effects can become highly statistically significant. \n",
+    "\n",
+    "These findings suggest that higher education levels may be slightly associated with later age at first substance use among these clients, though the strength of this association is weak."
    ]
   },
   {
