--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -820,6 +820,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data munging\n",
+    "Place your **data munging** code and documentation within this section.  \n",
+    "- Keep each of your Code cells short and focused on a single task.  \n",
+    "- Include a Markdown cell above each code cell that describes what task the code within the code cell is performing.\n",
+    "- Make as many code cells as you need to complete the munging - a few have been created for you to start with.\n",
+    "- Display 5 sample rows of the modified data after each transformation so a viewer can see how the data has changed.\n",
+    "\n",
+    "**Note**: If you believe that your data set does not require any munging, please explain in detail.  Create Markdown cells that explain your thinking and create Code cells that show any specific structures of the data you refer to in your explanation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. There is no need for removal of null values because they have already been recoded as -9 in the original datasets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -981,35 +1002,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data munging\n",
-    "Place your **data munging** code and documentation within this section.  \n",
-    "- Keep each of your Code cells short and focused on a single task.  \n",
-    "- Include a Markdown cell above each code cell that describes what task the code within the code cell is performing.\n",
-    "- Make as many code cells as you need to complete the munging - a few have been created for you to start with.\n",
-    "- Display 5 sample rows of the modified data after each transformation so a viewer can see how the data has changed.\n",
-    "\n",
-    "**Note**: If you believe that your data set does not require any munging, please explain in detail.  Create Markdown cells that explain your thinking and create Code cells that show any specific structures of the data you refer to in your explanation."
+    "### 2. There is also no need for data tranformation because the categorical variables in the original datasets have already been recoded into numeric values (see dtype of each column displayed in previous section)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There is no need for removal of null values because they have already been recoded as -9 in the original datasets."
+    "### 3. There is no need for removing duplicate rows as non are present."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df2019.duplicated().sum())\n",
+    "print(df2021.duplicated().sum())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There is also no need for data tranformation because the categorical variables in the original datasets have already been recoded into numeric values."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Since the subsequent analysis is only interested in New York admissions cases, we filter for rows where the State FIPS code is 36."
+    "### 4. Since the subsequent analysis is only interested in New York admissions cases, we filter for rows where the State FIPS code is 36."
    ]
   },
   {
