--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -837,7 +837,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. There is no need for removal of null values because they have already been recoded as -9 in the original datasets."
+    "### 1. There is no need for the removal/transformation of null/invalid/missing values, because they have already been recoded into -9 in the original datasets."
    ]
   },
   {
@@ -1037,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Since the subsequent analysis is only interested in New York admissions cases, we filter for rows where the State FIPS code is 36."
+    "### 4. Since the subsequent analyses would be focused on New York admissions cases, we filter for rows where the State FIPS code is 36."
    ]
   },
   {
